--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "node": ">=18.6.0"
   },
   "dependencies": {
-    "snaps-cli": "^0.4.2"
+    "crypto-js": "^4.1.1",
+    "snaps-cli": "^0.4.2",
+    "uuid": "^9.0.1"
   }
 }
