--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/template-snap-monorepo.git"
   },
   "source": {
-    "shasum": "xfg4pDDrMMr2YqKeRnyn6JxGqx1SLCQ6DGakoZ4GN+A=",
+    "shasum": "CDPNFZmuVqKktn2/QB0Koh0fGy01+ntZDCiPKwqXXSU=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -19,7 +19,7 @@
   },
   "initialPermissions": {
     "endowment:transaction-insight": {},
-    "endowment:ethereum-provider": {}
+    "endowment:network-access": {}
   },
   "manifestVersion": "0.1"
 }
