--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "dependencies": {
     "crypto-js": "^4.1.1",
     "snaps-cli": "^0.4.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "webextension-polyfill": "^0.10.0"
   }
 }
