--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/template-snap-monorepo.git"
   },
   "source": {
-    "shasum": "SjzXRGIZhYI3xuSSbtvUo8PoYWyWQQML5Uik+RGhGNw=",
+    "shasum": "+XHXP8+J8FSp7Vpw7Igj1myIbG7+nrdnHGze/K5ECwo=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -18,7 +18,9 @@
     }
   },
   "initialPermissions": {
-    "endowment:transaction-insight": {},
+    "endowment:transaction-insight": {
+      "allowTransactionOrigin": true
+    },
     "endowment:network-access": {}
   },
   "manifestVersion": "0.1"
