--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/template-snap-monorepo.git"
   },
   "source": {
-    "shasum": "olJawbmZgiEW47kDB7XkNRIqz00FYxsHmOw4Kshsf54=",
+    "shasum": "VP6SI8OEguStiFXntfSScZQCf6TyznlAwKW7323yfco=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -21,7 +21,8 @@
     "endowment:transaction-insight": {
       "allowTransactionOrigin": true
     },
-    "endowment:network-access": {}
+    "endowment:network-access": {},
+    "endowment:ethereum-provider": {}
   },
   "manifestVersion": "0.1"
 }
