--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -7,11 +7,11 @@
     "url": "https://github.com/MetaMask/template-snap-monorepo.git"
   },
   "source": {
-    "shasum": "sUvPY0kIsllbfRTckhGwo4Xnb1/BagGqtkI44A5YY6w=",
+    "shasum": "hKpy03KRnTTxpmZ2YHZekCW4NGVDqERAPMaGKZhDvMA=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
-        "iconPath": "images/HashDit-Icon.svg",
+        "iconPath": "images/hashdit.svg",
         "packageName": "snap",
         "registry": "https://registry.npmjs.org/"
       }
