--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/MetaMask/template-snap-monorepo.git"
   },
   "source": {
-    "shasum": "JudjoZzwnOrIUaK5aKQwsuRTpCOlBUwY0PLoRCVMnQM=",
+    "shasum": "I8HYIoMQR0cwNsFd7pm+G1ReS7fQySS534PVtQX1K2s=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -23,6 +23,7 @@
     },
     "endowment:network-access": {},
     "endowment:ethereum-provider": {},
+    "snap_manageState": {},
     "endowment:rpc": {
       "dapps": true,
       "snaps": false
