--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "@metamask/template-snap-monorepo",
+  "name": "HashDit-Security-Snap",
   "version": "0.1.0",
   "private": true,
-  "description": "",
+  "description": "The HashDit Security MetaMask Snap that screens user's transactions for malicious activity before approving any transaction.",
   "homepage": "https://github.com/MetaMask/template-snap-monorepo#readme",
   "bugs": {
     "url": "https://github.com/MetaMask/template-snap-monorepo/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MetaMask/template-snap-monorepo.git"
+    "url": "https://github.com/Matrix-Devs/HashDit-Snaps.git"
   },
   "license": "(MIT-0 OR Apache-2.0)",
-  "author": "",
+  "author": "HashDit Security",
   "workspaces": [
     "packages/*"
   ],
