--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "HashDit-Security-Snap",
+  "name": "HashDit-Snap",
   "version": "0.1.0",
   "private": true,
   "description": "The HashDit Security MetaMask Snap that screens user's transactions for malicious activity before approving any transaction.",
   "homepage": "https://github.com/MetaMask/template-snap-monorepo#readme",
   "bugs": {
-    "url": "https://github.com/Matrix-Devs/HashDit-Snaps/issues"
+    "url": "https://github.com/Matrix-Devs/HashDit-Snaps-Audit/issues"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Matrix-Devs/HashDit-Snaps.git"
+    "url": "https://github.com/Matrix-Devs/HashDit-Snap-Audit.git"
   },
   "license": "(MIT-0 OR Apache-2.0)",
   "author": "HashDit Security",
