--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -36,6 +36,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@metamask/snaps-sdk": "^4.1.0",
     "@metamask/snaps-types": "^2.0.0",
     "@metamask/snaps-ui": "^2.0.0",
     "buffer": "^6.0.3"
