--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/hashdit/metamask-snap.git"
   },
   "source": {
-    "shasum": "XVgARc5SF/AFt/iDQtbUNTm9fNoG1dy+RnET93/pDmg=",
+    "shasum": "97SGDvOJ3Cb6JbbhavSkVrgbTY9AVDvFonU+bLpRTyQ=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -24,10 +24,8 @@
     "endowment:network-access": {},
     "endowment:ethereum-provider": {},
     "snap_manageState": {},
-    "endowment:rpc": {
-      "dapps": true,
-      "snaps": false
-    }
+    "endowment:lifecycle-hooks": {},
+    "snap_dialog": {}
   },
   "manifestVersion": "0.1"
 }
