--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/hashdit/metamask-snap.git"
   },
   "source": {
-    "shasum": "97SGDvOJ3Cb6JbbhavSkVrgbTY9AVDvFonU+bLpRTyQ=",
+    "shasum": "LRUfjFSWtL/7LupBfIjN9RCjYz7b3L66XGZOgfo6SkU=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -25,7 +25,8 @@
     "endowment:ethereum-provider": {},
     "snap_manageState": {},
     "endowment:lifecycle-hooks": {},
-    "snap_dialog": {}
+    "snap_dialog": {},
+    "endowment:page-home": {}
   },
   "manifestVersion": "0.1"
 }
