Update sigInsight branch (#8)
* Feat/poisoning (#3)

* feat: Request user accounts and auth on onInstall.

* feat: Finish address poisoning, switch install method from onRPC to onInstall

* fix: Fix auth bug. Remove RPC permission.

* fix: remove onRpcHandler

* Feat/home page (#4)

* feat: Add home page

* shasum

* Feat/poisoning (#5)

* feat: Request user accounts and auth on onInstall.

* feat: Finish address poisoning, switch install method from onRPC to onInstall

* fix: Fix auth bug. Remove RPC permission.

* fix: remove onRpcHandler

* fix: Adjust similarity logic

* refactor: Remove console.log

* refactor: Update to v0.2.0, run prettier

* Update README.md

* fix: Update readme

* Fix/url screening risk (#6)

* feat: Change URL screen logic and info. Optimize

* fix: Add missing address poisoning on non supported chains

* feat: Add parallelization to API calls

* refactor: Format with Prettier

* refactor: Remove unused code

---------

Co-authored-by: Wilson Wu <wilson.wu@binance.com>

* refactor: Remove unused code, remove added TODO

* refactor: Remove comment

* feat: Add survey to homePage and onInstall (#7)

Co-authored-by: Wilson Wu <wilson.wu@binance.com>

---------

Co-authored-by: Wilson Wu <wilson.wu@binance.com>

--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.1.2",
+  "version": "0.2.1",
   "description": "HashDit security snap to screen addresses before interaction.",
   "proposedName": "HashDit Security",
   "repository": {
@@ -7,7 +7,9 @@
     "url": "https://github.com/hashdit/metamask-snap.git"
   },
   "source": {
-    "shasum": "hzW5VqLftE9aNNZos78wuc5CtgG3UISudccw8r22Y10=",
+
+    "shasum": "MvDrrKMzNVeF1a4Zq0Ibkw0uaotNG4VVu1zE7BkIzpk=",
+
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -24,9 +26,20 @@
     "endowment:network-access": {},
     "endowment:ethereum-provider": {},
     "snap_manageState": {},
-    "endowment:rpc": {
-      "dapps": true,
-      "snaps": false
+
+    "endowment:lifecycle-hooks": {},
+    "snap_dialog": {},
+    "endowment:page-home": {},
+    "snap_notify": {},
+    "endowment:cronjob": {
+      "jobs": [
+        {
+          "expression": "* * * * *",
+          "request": {
+            "method": "execute"
+          }
+        }
+      ]
     },
     "endowment:signature-insight": {
       "allowSignatureOrigin": true
