--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -36,6 +36,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@metamask/snaps-sdk": "^6.5.0",
     "@metamask/snaps-types": "^3.1.0",
     "@metamask/snaps-ui": "^2.0.0",
     "buffer": "^6.0.3"
@@ -48,8 +49,8 @@
     "@metamask/eslint-config-jest": "^10.0.0",
     "@metamask/eslint-config-nodejs": "^10.0.0",
     "@metamask/eslint-config-typescript": "^10.0.0",
-    "@metamask/snaps-cli": "^2.0.1",
-    "@metamask/snaps-jest": "^1.0.0",
+    "@metamask/snaps-cli": "^6.2.1",
+    "@metamask/snaps-jest": "^8.2.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.21.0",
