refactor: Remove unused code, add error response

--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -1,53 +1,57 @@
 {
-	"version": "0.2.1",
-	"description": "HashDit security snap to screen addresses before interaction.",
-	"proposedName": "HashDit Security",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/hashdit/metamask-snap.git"
-	},
-	"source": {
-		"shasum": "rPqMGqN+7XW6OEi5WKkFStYVd8jKlz79eGZjL1q64ts=",
-		"location": {
-			"npm": {
-				"filePath": "dist/bundle.js",
-				"iconPath": "images/hashdit.svg",
-				"packageName": "hashdit-snap-security",
-				"registry": "https://registry.npmjs.org/"
-			}
-		}
-	},
-	"initialPermissions": {
-		"endowment:transaction-insight": {
-			"allowTransactionOrigin": true
-		},
-		"endowment:network-access": {},
-		"endowment:ethereum-provider": {},
-		"snap_manageState": {},
-		"endowment:lifecycle-hooks": {},
-		"snap_dialog": {},
-		"endowment:page-home": {},
-		"snap_notify": {},
-		"endowment:cronjob": {
-			"jobs": [
-				{
-					"expression": "*/1 * * * *",
-					"request": {
-						"method": "getAllApprovals"
-					}
-				},
-				{
-					"expression": "*/1 * * * *",
-					"request": {
-						"method": "getRiskyApprovals"
-					}
-				}
-			]
-		},
-		"endowment:rpc": {
-			"dapps": true,
-			"snaps": false
-		}
-	},
-	"manifestVersion": "0.1"
+  "version": "0.2.1",
+  "description": "HashDit security snap to screen addresses before interaction.",
+  "proposedName": "HashDit Security",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hashdit/metamask-snap.git"
+  },
+  "source": {
+    "shasum": "cTZSZEv9pHEYh1zc1O1tK1RFlKhZH4JW+1TPgiT8D2g=",
+    "location": {
+      "npm": {
+        "filePath": "dist/bundle.js",
+        "iconPath": "images/hashdit.svg",
+        "packageName": "hashdit-snap-security",
+        "registry": "https://registry.npmjs.org/"
+      }
+    }
+  },
+  "initialPermissions": {
+    "endowment:transaction-insight": {
+      "allowTransactionOrigin": true
+    },
+    "endowment:network-access": {},
+    "endowment:ethereum-provider": {},
+    "snap_manageState": {},
+    "endowment:lifecycle-hooks": {},
+    "snap_dialog": {},
+    "endowment:page-home": {},
+    "snap_notify": {},
+    "endowment:cronjob": {
+      "jobs": [
+        {
+          "expression": "*/1 * * * *",
+          "request": {
+            "method": "getAllApprovals"
+          }
+        },
+        {
+          "expression": "*/1 * * * *",
+          "request": {
+            "method": "getRiskyApprovals"
+          }
+        }
+      ]
+    },
+    "endowment:rpc": {
+      "allowedOrigins": [
+        "https://metamask.io",
+        "https://hashdit.io/",
+        "http://localhost:8080",
+        "http://localhost:6001"
+      ]
+    }
+  },
+  "manifestVersion": "0.1"
 }
