--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "HashDit security snap to screen addresses before interaction.",
   "proposedName": "HashDit Security",
   "repository": {
@@ -7,7 +7,7 @@
     "url": "https://github.com/hashdit/metamask-snap.git"
   },
   "source": {
-    "shasum": "dPTackYM79xF7607L6iHLYbtvJOsSOmmizilV3hrKf4=",
+    "shasum": "oyIgHsstoKFfw5Qq9rNvYSrOiMLcdOJq/RuDjy57thc=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -26,7 +26,10 @@
     "snap_manageState": {},
     "endowment:lifecycle-hooks": {},
     "snap_dialog": {},
-    "endowment:page-home": {}
+    "endowment:page-home": {},
+    "endowment:signature-insight": {
+      "allowSignatureOrigin": true
+    }
   },
   "manifestVersion": "0.1"
 }
