--- a/packages/snap/tsconfig.json
+++ b/packages/snap/tsconfig.json
@@ -1,6 +1,10 @@
-
 {
   "extends": "../../tsconfig.json",
-  "include": ["src"],
-
+  "compilerOptions": {
+    "outDir": "dist",
+    "jsx": "react-jsx",
+    "jsxImportSource": "@metamask/snaps-sdk"
+  },
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules", "dist"]
 }
