--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -36,6 +36,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@metamask/snaps-sdk": "^6.1.1",
     "@metamask/snaps-types": "^3.1.0",
     "@metamask/snaps-ui": "^2.0.0",
     "buffer": "^6.0.3",
@@ -49,8 +50,10 @@
     "@metamask/eslint-config-jest": "^10.0.0",
     "@metamask/eslint-config-nodejs": "^10.0.0",
     "@metamask/eslint-config-typescript": "^10.0.0",
-    "@metamask/snaps-cli": "^2.0.1",
-    "@metamask/snaps-jest": "^1.0.0",
+    "@metamask/snaps-cli": "^6.2.1",
+    "@metamask/snaps-jest": "^8.2.0",
+    "@types/react": "18.2.4",
+    "@types/react-dom": "18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.21.0",
@@ -61,8 +64,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
-    "prettier": "^2.2.1",
-    "prettier-plugin-packagejson": "^2.2.11",
     "rimraf": "^3.0.2",
     "through2": "^4.0.2",
     "ts-jest": "^29.1.0",
