New JSX UI, Transaction, and Simulation API (#18)
* fix: Refactor signatureInsight and blacklist check

* refactor: fix Signature Insight issue, move content creation out and into AddressCheck

* feat: Add new simulation code

* feat: Move API calls into promise.all

* feat: Switch to JSX UI (#17)

Co-authored-by: Wilson Wu <wilson.wu@binance.com>

* feat: Update Simulation, Blacklist and Transaction UI to JSX

* feat: Update UI

* fix: Incorrect chainID in Simulation call

* feat: Add logic for non-supported chains, remove old code

* refactor: Remove logs, adjust content

* feat: Sort risks by highest to lowest, adjust UI to be more consistent

* refactor: Simply risk variant

* fix: Append _interaction to end of destination headers

* refactor: Comment out console.logs

---------

Co-authored-by: Wilson Wu <wilson.wu@binance.com>

--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/hashdit/metamask-snap.git"
   },
   "source": {
-    "shasum": "YWyFdMxKlDzcHj5IFd7HUEdBMb+Lc5BgIDsftx4CTco=",
+    "shasum": "zfweUiJETU8FRPpr0FrGseC3cdGy6kXrbaQqzpEGAfs=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -31,5 +31,6 @@
       "allowSignatureOrigin": true
     }
   },
+  "platformVersion": "6.24.0",
   "manifestVersion": "0.1"
 }
