--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -36,7 +36,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@metamask/snaps-sdk": "^6.1.1",
+    "@metamask/snaps-sdk": "6.22.0",
     "@metamask/snaps-types": "^3.1.0",
     "@metamask/snaps-ui": "^2.0.0",
     "buffer": "^6.0.3",
