--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@metamask/snaps-sdk": "^8.0.0",
     "crypto-js": "^4.2",
     "ethers": "^6.8.1",
+    "gatsby": "^5.14.5",
     "snaps-cli": "^0.4.2",
     "uuid": "^9.0.1",
     "webextension-polyfill": "^0.10.0"
